# scratch

./: README.md
ascii/: charset.go
boids/: .gitignore  Cargo.toml  Makefile  README.md
boids/boids/: Cargo.toml
boids/boids/src/: lib.rs
boids/boids/src/boids/: boid.rs  flock.rs  mod.rs
boids/boids/src/vectors/: mod.rs  vec2.rs
boids/www/: Cargo.toml
boids/www/assets/: index.html
boids/www/src/: main.rs
halo/: Dockerfile  Makefile  README.md  compose.yaml  config.toml  controllers.go  controllers_fragment.go  controllers_static.go  go.mod  go.sum  middleware.go  server.go  store.go  store_test.go
halo/cmd/: main.go
halo/internal/api/: basic_auth.go  cookie.go  logger.go  middleware.go
halo/internal/stringutil/: util.go
halo/templates/: home.html  image-dialog.html  image-tags-associated.html  image-tags-unassociated.html  images.html  tags-image.html  tags-select.html
min-cost-max-flow-multi-demand/: Pipfile  README.md  flow.py  test.py
quantise/: Makefile  dither.go  go.mod  quantise.go
quantise/cmd/: main.go
spot/: .gitignore  Makefile  README.md  client.go  go.mod  go.sum  query.go
spot/cmd/: main.go
spot/internal/browserutil/: open.go
spot/internal/stringutil/: rand.go
