[package]
name = "www"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["time"] }
tower-http = { version = "0.4.1", features = ["trace"] }
time = { version = "0.3.23", features = ["macros"] }
http = "0.2.9"
